# Banking_Mangement_SS

./: CMakeLists.txt  Untitled Diagram.drawio  a.out  adminCreator.c  client  client.c  cuslog  customerlogout.c  db.cpp  db.h  logemp  logoutAdmin  logoutemployee.c  makeadmin  makeadmin.c  server.c  tester.c
admin/: admintasks.c  admintasks.h
customer/: customertask.c  customertask.h
db/: Untitled Diagram.drawio  admins.txt  customers.txt  employees.txt  feedback.txt  loans.txt  logged_in.txt  transactions.txt
employee/: emptask.c  emptask.h
login/: login.c  login.h
manager/: managertask.c  managertask.h
